# rocketmq-clients

.github/workflows/: cpp_release.yaml  cpp_tagged_release.yaml
cpp/: MODULE.bazel  WORKSPACE
cpp/bazel/: rocketmq_deps.bzl
cpp/source/: BUILD.bazel
cpp/source/client/: BUILD.bazel  TelemetryBidiReactor.cpp
cpp/tools/: gen_compile_commands.sh
